--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -14,3 +14,7 @@ format: html
 # Code chunk
 ```
 
+## This if poorly formatted
+
+-   Definitely should have an empty space above this list.
+-   This isn't a list, why not?
