made plot distribution as function

--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -45,3 +45,9 @@ ggplot(lipidomics, aes(x = value)) +
   facet_wrap(vars(metabolite), scales = "free") +
   theme_minimal()
 ```
+
+## Results: Distribution plot
+
+```{r}
+tar_read(plot_distributions)
+```
