added clean function

--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -51,3 +51,24 @@ ggplot(lipidomics, aes(x = value)) +
 ```{r}
 tar_read(plot_distributions)
 ```
+
+## Preparing the data
+
+```{r}
+lipidomics %>%
+  count(code, metabolite) %>% 
+  filter(n>1)
+```
+
+```{r}
+lipidomics |>
+  group_by(pick(-value)) |>
+  summarise(value = mean(value), .groups = "keep") |>
+  ungroup()
+```
+
+```{r}
+
+
+clean(lipidomics)
+```
