--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -68,7 +68,22 @@ lipidomics |>
 ```
 
 ```{r}
+lipidomics |>
+  filter(metabolite == "Cholesterol") |>
+  mutate(
+    class = as.factor(class),
+    value = scale(value)
+  )
+```
 
+```{r}
+just_cholesterol <- lipidomics |>
+  filter(metabolite == "Cholesterol") |>
+  preprocess()
 
-clean(lipidomics)
+glm(
+    formula = class ~ value,
+  data = just_cholesterol,
+  family = binomial
+)
 ```
