--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -76,23 +76,24 @@ lipidomics |>
   )
 ```
 
+## Running multiple models
+
 ```{r}
 just_cholesterol <- lipidomics |>
   filter(metabolite == "Cholesterol") |>
   preprocess()
 
-glm(
-  formula = class ~ value,
-  data = just_cholesterol,
-  family = binomial
-) |>
-  broom::tidy(exponentiate = TRUE) |>
-  mutate(
-    metabolite = unique(just_cholesterol$metabolite),
-    model = format(class ~ value),
-    .before = everything() 
-  )
-```
+fit_all_models <- function(data) {
+  list(
+    class ~ value,
+    class ~ value + gender + age
+  ) |>
+    purrr::map(\(model) fit_model(data, model = model)) |>
+    purrr::list_rbind()
+}
 
-```{r}
+lipidomics |>
+  filter(metabolite == "Cholesterol") |>
+  preprocess() |>
+  fit_all_models()
 ```
