--- a/docs/learning.qmd
+++ b/docs/learning.qmd
@@ -83,17 +83,18 @@ just_cholesterol <- lipidomics |>
   filter(metabolite == "Cholesterol") |>
   preprocess()
 
-fit_all_models <- function(data) {
-  list(
-    class ~ value,
-    class ~ value + gender + age
-  ) |>
-    purrr::map(\(model) fit_model(data, model = model)) |>
-    purrr::list_rbind()
-}
-
 lipidomics |>
   filter(metabolite == "Cholesterol") |>
   preprocess() |>
   fit_all_models()
+```
+
+## Running multiple metabolites
+
+```{r}
+lipidomics |>
+  group_split(metabolite) |>
+  map(preprocess) |>
+  map(fit_all_models) |>
+  list_rbind()
 ```
